Message sending with common message queue event manager